--- a/LoraInternOnlin/Views/Home/Index.cshtml
+++ b/LoraInternOnlin/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <h1>RaspBerry Pi Lora Gateway</h1>
+    <h1>RaspBerry Pi Lora Gateway Test</h1>
     <p class="lead">Shows sensor datas in UoSM</p>
     <p><a href="https://github.com/HankRobot/LoraInternOnline" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
